fix 100vh menu on safari

--- a/styles/scss/_menu.scss
+++ b/styles/scss/_menu.scss
@@ -4,7 +4,8 @@
 	top: 0;
 	left: 0;
 	width: 0;
-	height: 100vh;
+	// height: 100vh;
+	min-height: -webkit-fill-available;
 	background: $darkblue;
 	overflow: hidden;
 	transition: width 0.4s ease;
